using System;

[Serializable]
public enum BattleSide
{
	Neutral,
	Player,
	Enemy
}
